--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,66 @@
-# Empty CSS file for your own CSS
+div.container-fluid{
+    display: grid;
+    row-gap: 100px;
+}
+
+.carousel-item > img {
+    filter: blur(8px)
+}
+
+.row > .col-md-4 {
+    display : grid;
+    align-items: center;
+}
+
+.row:nth-child(odd) > .col-md-4  {
+    justify-content: end;
+}
+
+.row:nth-child(even) > .col-md-4 {
+    justify-content: start;
+}
+
+.push-text-down{
+    margin-top:10%;
+    position:absolute;
+}
+
+.heading-container{
+    position: absolute;
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    z-index: 2;
+}
+.heading-text{
+    color: orange;
+}
+
+h3,h4{
+    color: orange;
+}
+
+em{
+    color: orange;
+}
+
+/* body{ */
+    /* background-image: linear-gradient(45deg,rgb(255,175,21),rgb(255,185,47),rgb(255,195,73),rgb(255,205,99),rgb(255,215,125),rgb(255,225,151),rgb(255,235,176),rgb(255,245,202),rgb(255,255,228)); */
+    /* filter: blur(3px) */
+/* } */
+
+/* .bg-img{
+  background-image: linear-gradient(45deg,rgb(255,175,21),rgb(255,185,47),rgb(255,195,73),rgb(255,205,99),rgb(255,215,125),rgb(255,225,151),rgb(255,235,176),rgb(255,245,202),rgb(255,255,228));
+  position: fixed
+  width: 100vw
+  height: 100vh
+
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  
+  height: 100%; 
+  
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
