--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,12 @@ div.container-fluid{
     align-items: center;
 }
 
-div#content-container > .row:nth-child(odd) > .col-md-4  {
-    justify-content: end;
+.image-start  {
+    justify-content: start;
 }
 
-div#content-container > .row:nth-child(even) > .col-md-4 {
-    justify-content: start;
+.image-end {
+    justify-content: end;
 }
 
 .push-text-down{
@@ -86,10 +86,6 @@ em{
     list-style-type: none;
 }
 
-tr > td:nth-child(odd){
-    color: orange;
-}
-
 .people-div{
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -99,6 +95,58 @@ tr > td:nth-child(odd){
     align-self: start;
 }
 
+.carousel-item > img{
+    min-height: 40vh;
+}
+
+body{
+    padding-top: 15px;
+}
+
+hr{
+    min-width: 80vw;
+    color: silver;
+}
+
+@media (orientation:landscape) {
+    
+
+    /* div#content-container > .works-field:nth-child(even){
+        grid-template-areas: "image text";
+    } */
+    
+    /* div#content-container > .works-field:nth-child(odd) {
+        grid-template-areas: "text image";
+    } */     
+}
+
+@media (orientation:portrait) {
+    .works-field{
+        display: grid !important;
+    }
+    
+    .works-field > .col-md-4{
+        grid-area: image;
+    }
+    .works-field > .col-md-8{
+        grid-area: text;
+    }
+
+    div#content-container > .works-field {
+        grid-template-areas: "text"
+                             "image";
+    }
+
+    div#content-container > .works-field > .col-md-4  {
+        justify-content: center;
+    }
+    
+}
+
+/* div.row {
+    padding-bottom: 100px; 
+    border-bottom: 1px solid silver;
+  } */
 /* body{ */
     /* background-image: linear-gradient(45deg,rgb(255,175,21),rgb(255,185,47),rgb(255,195,73),rgb(255,205,99),rgb(255,215,125),rgb(255,225,151),rgb(255,235,176),rgb(255,245,202),rgb(255,255,228)); */
     /* filter: blur(3px) */
