Set carousel images to be in cover format

--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,9 @@ em{
 .carousel-item > img{
     min-height: 55vh;
     max-height: 70vh;
+    max-width: none;
+    min-width: 100%;
+    object-fit: cover;
 }
 
 body{
