Design changes, put carousel in all images

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@
     --secondary-color: #B4C9E4;
 }
 
+p{
+    text-align: justify;
+}
+
 div.container-fluid{
     display: grid;
     /* row-gap: 100px; */
@@ -23,24 +27,13 @@ div.container-fluid{
     justify-content: end;
 }
 
-.image-end > img{
-    min-width: 90%;
-    box-shadow: 20px 20px var(--secondary-color);
-}
-
-.image-start > img{
-    min-width: 90%;
-    box-shadow: 20px 20px var(--secondary-color);
-}
-
-
 .push-text-down{
     margin-top:7.5%;
 }
 
 .heading-container{
     position: absolute;
-    width: 100%;
+    /* width: 100%; */
     display: grid;
     justify-items: center;
     z-index: 2;
@@ -117,7 +110,7 @@ em{
     min-height: 55vh;
     max-height: 70vh;
     max-width: none;
-    min-width: 100%;
+    /* min-width: 100vw; */
     object-fit: cover;
 }
 
@@ -125,31 +118,57 @@ body{
     padding-top: 15px;
 }
 
-hr{
-    min-width: 80vw;
+hr{    
     color: silver;
+    margin-inline: 10%;
 }
 
 .works-field{
-    /* border: 50px solid rgb(223,117,0); */
+    max-width: 100vw;
     background-color: var(--primary-color);
 }
 
-@media (orientation:landscape) {
-    
 
-    /* div#content-container > .works-field:nth-child(even){
-        grid-template-areas: "image text";
-    } */
+div.image-end.rounded{
+    box-shadow: -20px 20px var(--secondary-color);
+}
+
+
+div.image-start.rounded{
+    box-shadow: 20px 20px var(--secondary-color);
+}
+
+@media (orientation:landscape) {
+    .image-end > img{
+        min-width: 90%;
+        box-shadow: -20px 20px var(--secondary-color);
+    }
     
-    /* div#content-container > .works-field:nth-child(odd) {
-        grid-template-areas: "text image";
-    } */     
+    .image-start > img{
+        min-width: 90%;
+        box-shadow: 20px 20px var(--secondary-color);
+    }
 }
 
 @media (orientation:portrait) {
+    .image-end > img{
+        max-width: 100%;
+        box-shadow: 20px 20px var(--secondary-color);
+    }
+    
+    .image-start > img{
+        max-width: 100%;
+        box-shadow: 20px 20px var(--secondary-color);
+    }
+
+    .col-sm-1{
+        height: 5vh;
+    }
+
+
     .works-field{
         display: grid !important;
+        justify-items: center;
     }
     
     .works-field > .col-md-7{
@@ -165,6 +184,17 @@ hr{
     }
 
     div#content-container > .works-field > .col-md-7  {
+        justify-content: center;
+    }
+
+
+    .image-start  {
+        display: flex;
+        justify-content: center;
+    }
+
+    .image-end {
+        display: flex;
         justify-content: center;
     }
     
